app/base/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  labels:
    app: uptoyoushop
    tier: frontend
  namespace: uptoyoushop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptoyoushop
  template:
    metadata:
      labels:
        app: uptoyoushop
    spec:
      containers:
        - name: frontend-app
          image: /uptoyoushop-frontend:8909048
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
