app/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptoyoushop-ingress
  namespace: uptoyoushop
  labels:
    app: uptoyoushop
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-southeast-1:575108951885:certificate/ff255032-f796-4238-b0b4-2dd738d9fe07'

spec:
  ingressClassName: alb
  rules:
    - host: uptoyoushop.techallows.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-app
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-app
                port:
                  number: 80
